Урок 2: - Заменил List.of на Arrays.asList В тесте testFindPassword(). - Вынес метод passwordSelection() в отдельный класс.